--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Poppins&display=swap');
 
 
-/* font-family: 'Cinzel', serif;
-font-family: 'Poppins', sans-serif; */
+/*
+font-family: 'Cinzel', serif;
+font-family: 'Poppins', sans-serif;
+*/
+
+
 body{
     margin: 0;
     color: #333;
